[package]
name = "regular_expression"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
interval_map = { git = "https://github.com/RobertDurfee/IntervalMap" }
finite_automata = { git = "https://github.com/RobertDurfee/FiniteAutomata" }
