[package]
name = "re-bootstrap"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
interval-map = { path = "../../IntervalMap" }
finite-automata = { path = "../../FiniteAutomata" }
