[package]
name = "re"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
interval-map = { path = "../../IntervalMap" }
finite-automata = { path = "../../FiniteAutomata" }
re-bootstrap = { path = "../re-bootstrap" }
lexer-bootstrap = { path = "../../LexerGenerator/lexer-bootstrap" }
parser-bootstrap = { path = "../../ParserGenerator/parser-bootstrap" }
