[package]
name = "re"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
interval-map = { git = "https://github.com/RobertDurfee/IntervalMap" }
finite-automata = { git = "https://github.com/RobertDurfee/FiniteAutomata" }
re-bootstrap = { git = "https://github.com/RobertDurfee/RegularExpression" }
lexer-bootstrap = { git = "https://github.com/RobertDurfee/LexerGenerator" }
parser-bootstrap = { git = "https://github.com/RobertDurfee/ParserGenerator" }
