[package]
name = "regular-expression-bootstrap"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A library for compiling and executing regular expressions."
license = "MIT"
repository = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"
readme = "README.md"
keywords = ["regular-expression", "regex", "regexp", "re"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/regular-expression-bootstrap/0.1.0/regular_expression_bootstrap/"
homepage = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"

[dependencies]
num-traits = "0.2.12"
segment-map = { path = "../../SegmentMap", version = "0.1.0" }
finite-automata = { path = "../../FiniteAutomata", version = "0.1.1" }
