[package]
name = "regular-expression"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A library for parsing, compiling, and executing regular expressions."
license = "MIT"
repository = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"
readme = "README.md"
keywords = ["regular-expression", "regex", "regexp", "re"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/regular-expression/0.1.0/regular_expression/"
homepage = "https://github.com/RobertDurfee/RegularExpression/tree/v0.1.0"

[dependencies]
lazy_static = "1.4.0"
segment-map = { path = "../../SegmentMap", version = "0.1.0" }
finite-automata = { path = "../../FiniteAutomata", version = "0.1.1" }
regular-expression-bootstrap = { path = "../regular-expression-bootstrap", version = "0.1.0" }
simple-lexer-bootstrap = { path = "../../LexerGenerator/simple-lexer-bootstrap", version = "0.1.0" }
simple-parser-bootstrap = { path = "../../ParserGenerator/simple-parser-bootstrap", version = "0.1.0" }
